@@ -32,7 +32,7 @@
 		<obfuscate>true</obfuscate>
 
 		<!-- dependency versions -->
-		<graalvm.version>21.3.0</graalvm.version>
+		<graalvm.version>22.0.0</graalvm.version>
 		<jetbrains-annotations.version>23.0.0</jetbrains-annotations.version>
 		<lombok.version>1.18.22</lombok.version>
 		<lombok-pg.version>0.11.3</lombok-pg.version>
@@ -42,14 +42,13 @@
 		<junit.jupiter.version>5.${junit.minor-version}</junit.jupiter.version>
 		<junit.platform.version>1.${junit.minor-version}</junit.platform.version>
 		<junit.platform.surefire.version>1.3.2</junit.platform.surefire.version>
-		<mockito.version>4.2.0</mockito.version>
+		<mockito.version>4.3.0</mockito.version>
 
 		<!-- plugin versions -->
 		<plugin.proguard.version>2.5.3</plugin.proguard.version>
-		<plugin.spotbugs.version>4.5.2.0</plugin.spotbugs.version>
+		<plugin.spotbugs.version>4.5.3.0</plugin.spotbugs.version>
 		<plugin.surefire.version>3.0.0-M5</plugin.surefire.version>
 		<plugin.shade.version>3.2.4</plugin.shade.version>
-		<!-- maven-javadoc-plugin in version 3.3.0 is not compatible with maven-site-plugin -->
 		<plugin.javadoc.version>3.3.1</plugin.javadoc.version>
 
 		<!-- JavaDoc URLs -->
@@ -151,6 +150,19 @@
 					<configuration>
 						<source>${java.version.prefixed}</source>
 						<target>${java.version.prefixed}</target>
+						<fork>true</fork>
+						<compilerArgs>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
